Fix scrolling behavior when content overflows

--- a/love/src/components/CSCSummary/CSCRealm/CSCRealm.module.css
+++ b/love/src/components/CSCSummary/CSCRealm/CSCRealm.module.css
@@ -8,6 +8,7 @@
 }
 
 .CSCGroupContainer {
+  overflow: auto;
   display: flex;
   flex-grow: 1;
   padding: 1em;
